fix: showing the overflow scroll when the select is open

--- a/src/components/Select/select.scss
+++ b/src/components/Select/select.scss
@@ -53,6 +53,7 @@
   &[aria-expanded='true'] {
     .sb-select-list {
       display: block;
+      overflow-y: auto;
     }
 
     .sb-minibrowser {
